--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start:dev": "nodemon ./src/server/server.js",
     "start": "node ./src/server/server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@google-cloud/firestore": "^7.7.0",
     "@hapi/hapi": "^21.3.9",
+    "@tensorflow/tfjs-node": "^3.21.1",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
